# sodic

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
ci/: format.py  lint.py  test.py
coco_dataset/: instances_train.json
demos/: draw_image.py
demos/drawables/: draw_circle.py  draw_rectangle.py  draw_triangle.py
demos/generators/: draw_random_images.py
examples/: create_sample_dataset.py
sodic/: image.py
sodic/dataformats/coco/: __init__.py  cocoannotation.py  cococategory.py  cocodataformat.py  cocoimage.py  cocoinfo.py  cocolicense.py  createdataset.py
sodic/drawables/: __init__.py  circle.py  drawable.py  rectangle.py  triangle.py
sodic/drawables/annotations/: __init__.py  boundingbox.py  segmentation.py
sodic/generators/: calculate_probability_bins.py  generatebboxes.py  generatedrawables.py  generaterandomimage.py
sodic/generators/specifications/: __init__.py  boundingboxgenerationspecifictation.py  drawablegenerationspecification.py
tests/: image_test.py
tests/dataformats/coco/: coco_annotation_test.py  coco_data_format_test.py  coco_image_test.py  create_dataset_test.py
tests/drawables/: circle_test.py  rectangle_test.py  triangle_test.py
tests/generators/: calculate_probability_weights_test.py  generate_bboxes_test.py  generate_drawables_test.py  generate_random_image_test.py
